--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="assets/images/pic01.jpeg" alt="Primeira imagem" /></span>
+							<span class="image fill" data-position="center"><img src="assets/images/pic01.jpg" alt="Primeira imagem" /></span>
 						</div>
 					</section>
 
@@ -48,8 +48,8 @@
 							</ul>
 						</header>
 						<div class="content">
-							<p> Saudações. Eu sou <b>Tiago César</b>! É um prazer poder me apresentar para você. <br> Eu sou uma pessoa com aspiração na área de análise e de desenvolvimento de sistemas e com conhecimentos na área de desenvolvimento de jogos. Como eu gosto de está sempre aprendendo e desenvolvendo novas experiências aos meus usuários, isso trabalhando com minha equipe, eu me vejo como uma pessoa que aprecia estar envolvida em projetos criativos.</p>
-							<p>Eu passei no programa do <a href="http://www.portaldaeducacao.recife.pe.gov.br/content/o-embarque-digital" target="_blank">embarque digital</a>,uma parceria com a prefeitura do Recife e com o Porto digital, maior parque tecnológico do Brasil e um dos maiores do mundo. Por fim, sou dinâmico, de convivência tranquila e com iniciativa no trabalho. </p>
+							<p> Saudações. Eu sou <b>Tiago César</b>! É um prazer poder me apresentar para você. <br> Eu sou uma pessoa encantada pela tecnologia e pelo desenvolvimento de projetos tecnológicos, como sistemas, serviços e jogos digitais. Sou uma pessoa tranquila e determinada, sempre buscando evoluir e melhorar os meus conhecimentos. Acredito que a tecnologia transforma o mundo, e quero auxiliar as pessoas através das soluções tecnológicas.</p>
+							<p>Técnico em análise e desenvolvimento de sistemas através da Escola Técnica Estadual Miguel Batista. Participei do programa embarque digital, parceria entre a prefeitura do Recife com o Porto digital para oferecer vagas de graduação. Por fim, curso Sistemas da informação na UFRPE. </p>
 							<span class="image main photo"><img src="assets/images/pic02.jpg"  alt="Foto de perfil" /></span>
 						</div>
 					</section>
