--- a/index.html
+++ b/index.html
@@ -169,6 +169,11 @@
 						allowfullscreen></iframe>
 				</div>
 
+				<div class="video-container">
+					<iframe src="https://drive.google.com/file/d/1yi8UdI48vuXPmj9MoBEfKOPviBCulKtJ/preview" width="640" height="480" allow="autoplay"></iframe>
+				</div>
+
+
 				<span class="image main photo"><img src="assets/images/pic11.png"
 						alt="E-mail enviado pelo sistema" /></span>
 				<div class="gallery">
@@ -194,7 +199,7 @@
 				</p>
 
 				<div class="video-container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/VEwOQ8PUWXI"
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/er9o4gHgzmc?si=himlMQfvqqWRkn_9"
 						title="YouTube video player" frameborder="0"
 						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
 						allowfullscreen></iframe>
@@ -203,13 +208,58 @@
 				<span class="image main photo"><img src="assets/images/Dashboard Task manager - tela inicial.png"
 						alt="Tela inicial do dashboard" /></span>
 				<div class="gallery">
-					<a href="assets/images/Dashboard Task manager - graficos.png"><img src="assets/images/Dashboard Task manager - graficos.png" alt="Gráficos dos dashboards" /></a>
-					<a href="assets/images/Dashboard Task manager - analise de unidade.png"><img src="assets/images/Dashboard Task manager - analise de unidade.png"
+					<a href="assets/images/Dashboard Task manager - graficos.png"><img
+							src="assets/images/Dashboard Task manager - graficos.png"
+							alt="Gráficos dos dashboards" /></a>
+					<a href="assets/images/Dashboard Task manager - analise de unidade.png"><img
+							src="assets/images/Dashboard Task manager - analise de unidade.png"
 							alt="Análise de unidade no dashboard" /></a>
-					<a href="assets/images/Dashboard Task manager - funcionários.png" ><img src="assets/images/Dashboard Task manager - funcionários.png"
+					<a href="assets/images/Dashboard Task manager - funcionários.png"><img
+							src="assets/images/Dashboard Task manager - funcionários.png"
 							alt="Listagem dos usuários de uma Unidade" /></a>
-					<a href="assets/images/Dashboard Task manager - analise de usuario.png" ><img src="assets/images/Dashboard Task manager - analise de usuario.png"
+					<a href="assets/images/Dashboard Task manager - analise de usuario.png"><img
+							src="assets/images/Dashboard Task manager - analise de usuario.png"
 							alt="Análise de um colaborador específico" /></a>
+				</div>
+
+				<br>
+				<p> <b>Sistema Projeto L.O.U.C.O (Envio de projetos)</b> <br> SENAC, PE 2023.</p>
+				<p> Meu coordenador de sistema me trouxe uma nova demanda de sistema, solicitada por outra unidade do
+					SENAC: a criação de um sistema para o projeto L.O.U.C.O. Este projeto mencionado é uma modalidade do
+					SENAC do Marco Zero, aonde alunos e professores poderão ter seus projetos avaliados pela internet.
+					Ou seja, eles criam grupos e enviam seus arquivos dos projetos criados, afim que um avaliador dê um
+					feedback.
+					<br>
+					O sistema Projeto L.O.U.C.O permite o envio e a avaliação de milhares de projetos sem o uso de
+					papel, além de registrar tudo no banco de dados do SENAC.
+				</p>
+
+				<div class="video-container">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/GAjubLHJOMI?si=Bvj96p28QcZCLBru"
+						title="YouTube video player" frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen></iframe>
+				</div>
+
+				<span class="image main photo"><img src="assets/images/projeto-louco login.png"
+						alt="Tela de login do sistema" /></span>
+				<div class="gallery">
+					<a href="assets/images/projeto-louco criacao de grupos.png"><img
+							src="assets/images/projeto-louco criacao de grupos.png"
+							alt="Criação de grupos do sistema" /></a>
+					<a href="assets/images/projeto-louco meus grupos.png"><img
+							src="assets/images/projeto-louco meus grupos.png"
+							alt="Os grupos do usuário no sistema" /></a>
+					<a href="assets/images/projeto-louco opcoes.png"><img src="assets/images/projeto-louco opcoes.png"
+							alt="Opções do grupo" /></a>
+					<a href="assets/images/projeto-louco adicionar-integrante.png"><img
+							src="assets/images/projeto-louco adicionar-integrante.png"
+							alt="Adicionar integrante ao grupo" /></a>
+					<a href="assets/images/projeto-louco solicitar avaliacao.png"><img
+							src="assets/images/projeto-louco solicitar avaliacao.png"
+							alt="Solicitação de avaliação do grupo" /></a>
+					<a href="assets/images/projeto-louco avaliacao de projetos.png"><img
+							src="assets/images/projeto-louco avaliacao de projetos.png" alt="Avaliação do grupo " /></a>
 				</div>
 
 				<br>
