--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 				<h1>Tiago Lopes</h1>
 				<p>Analista e desenvolvedor de sistemas. <br>
 					<a> BACK-END || FRONT-END </a> <br>
-					<a href="https://www.instagram.com/tiago_lopes.exe/" target="_blank">@tiago_lope.exe </a> / <a
-						href="https://github.com/TiagoUniverse" target="_blank">GitHub</a>
+					<a href="https://www.instagram.com/tiago_lopes.exe/" target="_blank">@tiago_lope.exe </a> /
+					<a href="https://github.com/TiagoUniverse" target="_blank">GitHub</a> /
+					<a href="https://www.linkedin.com/in/tiago-lopes--/" target="_blank">LinkedIn</a>
 				</p>
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
@@ -148,6 +149,10 @@
 			</header>
 			<div class="content">
 				<p> <b>Sistema Termo de Compromisso</b> <br> SENAC, PE 2022.</p>
+
+				<p>Link: <a href="https://www5.pe.senac.br/Termo-de-compromisso/Src/View/login.php" target="_blank"> Sistema Termo de Compromisso
+				</a></p>
+
 				<p> Quando um colaborador entra no SENAC, ele é registrado no banco de dados do RH e um responsável do
 					RH imprime um documento para solicitar a criação de conta de rede deste colaborador. O mesmo assina
 					o termo para que a equipe de Suporte do Senac possa criar a conta deste colaborador. O problema é
@@ -170,7 +175,8 @@
 				</div>
 
 				<div class="video-container">
-					<iframe src="https://drive.google.com/file/d/1yi8UdI48vuXPmj9MoBEfKOPviBCulKtJ/preview" width="640" height="480" allow="autoplay"></iframe>
+					<iframe src="https://drive.google.com/file/d/1yi8UdI48vuXPmj9MoBEfKOPviBCulKtJ/preview" width="640"
+						height="480" allow="autoplay"></iframe>
 				</div>
 
 
@@ -224,6 +230,10 @@
 
 				<br>
 				<p> <b>Sistema Projeto L.O.U.C.O (Envio de projetos)</b> <br> SENAC, PE 2023.</p>
+
+				<p>Link: <a href="https://www5.pe.senac.br//Ambiente-de-acesso-LOUCO-CETII/Src/view/login.php"
+						target="_blank"> Sistema Projeto L.O.U.C.O </a></p>
+
 				<p> Meu coordenador de sistema me trouxe uma nova demanda de sistema, solicitada por outra unidade do
 					SENAC: a criação de um sistema para o projeto L.O.U.C.O. Este projeto mencionado é uma modalidade do
 					SENAC do Marco Zero, aonde alunos e professores poderão ter seus projetos avaliados pela internet.
@@ -300,6 +310,10 @@
 				<br>
 				<p> <a href="https://tchau-camila.netlify.app/index.html" target="_blank"><b>Tchau, Camilla</b></a> <br>
 					SENAC, PE 2023.</p>
+
+				<p>Link: <a href="https://tchau-camila.netlify.app/index.html" target="_blank"> Website Tchau Camila
+					</a></p>
+
 				<p> Um site que desenvolvi como presente de despedida para uma colaboradora que trabalhou comigo durante
 					o SENAC. O site contêm várias fotos de momentos que passamos juntos e a deseja tudo de bom na
 					jornada de home office dela!
