Atualização de curriculo

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 				<p> <b>Universidade Federal Rural de Pernambuco Bacharelado em Sistemas da informação </b> <br>2021 –
 					Dias atuais</p>
 				<p> <b>Holy Spirit High School (Escola de ensino médio em Conception Bay South, Canadá / Intercâmbio
-						PGM)</b> <br>2019</p>
+						PGM)</b> <br>Junho de 2019.</p>
 				<p> <b>Escola Técnica Estadual Miguel Batista</b> <br>Técnico em Análise e Desenvolvimento de Sistemas
 					em horário integral Fevereiro <br> 2016 a dezembro - 2019.</p>
 				<div class="gallery">
@@ -399,7 +399,9 @@
 					<a href="assets/images/pic08.jpg"><img src="assets/images/pic08.jpg"
 							alt="Apresentação do projeto da faculdade Senac" /></a>
 					<a href="assets/images/pic10.jpg" class="landscape"><img src="assets/images/pic10.jpg"
-							alt="escola do intercambio" /></a>
+							alt="Uso de Oculus rift" /></a>
+					<a href="assets/images/tiago lendo livro.jpg" class="landscape"><img src="assets/images/tiago lendo livro.jpg"
+							alt="Tiago lendo livro de programação" /></a>
 				</div>
 			</div>
 		</section>
