--- a/index.html
+++ b/index.html
@@ -150,8 +150,9 @@
 			<div class="content">
 				<p> <b>Sistema Termo de Compromisso</b> <br> SENAC, PE 2022.</p>
 
-				<p>Link: <a href="https://www5.pe.senac.br/Termo-de-compromisso/Src/View/login.php" target="_blank"> Sistema Termo de Compromisso
-				</a></p>
+				<p>Link: <a href="https://www5.pe.senac.br/Termo-de-compromisso/Src/View/login.php" target="_blank">
+						Sistema Termo de Compromisso
+					</a></p>
 
 				<p> Quando um colaborador entra no SENAC, ele é registrado no banco de dados do RH e um responsável do
 					RH imprime um documento para solicitar a criação de conta de rede deste colaborador. O mesmo assina
@@ -168,14 +169,7 @@
 				</p>
 
 				<div class="video-container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/VEwOQ8PUWXI"
-						title="YouTube video player" frameborder="0"
-						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-						allowfullscreen></iframe>
-				</div>
-
-				<div class="video-container">
-					<iframe src="https://drive.google.com/file/d/1yi8UdI48vuXPmj9MoBEfKOPviBCulKtJ/preview" width="640"
+					<iframe src="https://drive.google.com/file/d/1NbKbUL723Jdtabtao3FGoB11Gq9-2GPj/preview" width="640"
 						height="480" allow="autoplay"></iframe>
 				</div>
 
@@ -400,8 +394,8 @@
 							alt="Apresentação do projeto da faculdade Senac" /></a>
 					<a href="assets/images/pic10.jpg" class="landscape"><img src="assets/images/pic10.jpg"
 							alt="Uso de Oculus rift" /></a>
-					<a href="assets/images/tiago lendo livro.jpg" class="landscape"><img src="assets/images/tiago lendo livro.jpg"
-							alt="Tiago lendo livro de programação" /></a>
+					<a href="assets/images/tiago lendo livro.jpg" class="landscape"><img
+							src="assets/images/tiago lendo livro.jpg" alt="Tiago lendo livro de programação" /></a>
 				</div>
 			</div>
 		</section>
